# rv_pah_project

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yaml  pyproject.toml
data/: W8_and_W12_loops_for_Oscar.xlsx
data/sample_datafiles/: CNT.yml  LV_active_data.json
postprocessed_results/: MeshConvergenceAnalysis_all_strain_results.json  MeshConvergenceAnalysis_all_stress_results.json  all_PV_results.json  all_active_results.json  all_strain_results.json  all_stress_results.json  make_paper_figures.py
scripts/: model_optimization.py  postprocess_model.py  postprocessing_utils.py  run_optimization.py  run_postprocessing.py
src/rv_pah_project/: __init__.py  custom_mechanics_problem.py  model_optimization.py  postprocess_model.py
